# Fractol

./: CMakeLists.txt  Makefile  README.md  mlx_install.sh
includes/: fract.h
libft/: Makefile
sources/: bonus.c  burn5.c  burningship.c  celtic.c  ft_strsplit.c  heart.c  init_main_struct.c  juila.c  key_hook.c  libft1.c  libft2.c  main.c  mand5.c  mandelbar.c  mandelbrot.c  move.c  threads.c
